<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout android:id="@+id/device_header"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center" android:orientation="horizontal"
		android:paddingBottom="0dip" android:paddingLeft="20dip"
		android:paddingRight="20dip" android:paddingTop="5dip">

		<Button android:id="@+id/header_home_button"
			android:layout_width="90dip" android:gravity="center"
			android:layout_height="40dip" android:onClick="handleCreate"
			android:text="@string/header_btn_create" />

		<Button android:id="@+id/header_refresh_button"
			android:layout_width="90dip" android:layout_height="40dip"
			android:gravity="center" android:onClick="handleRefresh" android:text="@string/header_btn_refresh" />

		<Button android:id="@+id/header_search_button"
			android:layout_width="90dip" android:layout_height="40dip"
			android:gravity="center" android:onClick="handleSearch" android:text="@string/header_btn_search" />
	</LinearLayout>


	<TextView android:id="@+id/header_text"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:paddingTop="2dip" android:paddingLeft="10dip"
		android:paddingBottom="2dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:ellipsize="end"
		android:singleLine="true" android:text="@string/header_text_path" />

	<ListView android:id="@+id/listView1" android:layout_width="fill_parent"
		android:layout_height="fill_parent">

	</ListView>

</LinearLayout>
